--- a/src/scss/smartphonePL.scss
+++ b/src/scss/smartphonePL.scss
@@ -63,7 +63,6 @@ p {
     position: absolute;
     width: 75vw;
     transform: translatex(5vw);
-    z-index: 0;
   }
 
   #bio {
